ASM2/Released/CompiledLanguage/BKITParser.py
# Generated from BKIT.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'if'", "'while'", "'using'", 
                     "'namespace'", "'cout'", "<INVALID>", "'int'", "'float'", 
                     "'main'", "'return'", "';'", "'('", "')'", "'{'", "'}'", 
                     "'<<'", "<INVALID>", "<INVALID>", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "Include", "If", "While", "Using", "NameSpace", 
                      "Cout", "InternalLib", "Int", "Flt", "Main", "Return", 
                      "Semi", "OpenPara", "ClosePara", "OpenBraket", "CloseBraket", 
                      "Shift", "InEq", "Inc", "Eq", "Assignment", "Id", 
                      "Integer", "Float", "String", "Char", "Skip", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_libIncl = 1
    RULE_libInclStmt = 2
    RULE_nsDef = 3
    RULE_nsDefStmt = 4
    RULE_mainFunc = 5
    RULE_main_body = 6
    RULE_decl = 7
    RULE_while_struct = 8
    RULE_while_body = 9
    RULE_return_stmt = 10

    ruleNames =  [ "program", "libIncl", "libInclStmt", "nsDef", "nsDefStmt", 
                   "mainFunc", "main_body", "decl", "while_struct", "while_body", 
                   "return_stmt" ]

    EOF = Token.EOF
    Include=1
    If=2
    While=3
    Using=4
    NameSpace=5
    Cout=6
    InternalLib=7
    Int=8
    Flt=9
    Main=10
    Return=11
    Semi=12
    OpenPara=13
    ClosePara=14
    OpenBraket=15
    CloseBraket=16
    Shift=17
    InEq=18
    Inc=19
    Eq=20
    Assignment=21
    Id=22
    Integer=23
    Float=24
    String=25
    Char=26
    Skip=27
    ERROR_CHAR=28
    UNCLOSE_STRING=29
    ILLEGAL_ESCAPE=30
    UNTERMINATED_COMMENT=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def libIncl(self):
            return self.getTypedRuleContext(BKITParser.LibInclContext,0)


        def nsDef(self):
            return self.getTypedRuleContext(BKITParser.NsDefContext,0)


        def mainFunc(self):
            return self.getTypedRuleContext(BKITParser.MainFuncContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.libIncl(0)
            self.state = 23
            self.nsDef(0)
            self.state = 24
            self.mainFunc()
            self.state = 25
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LibInclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def libIncl(self):
            return self.getTypedRuleContext(BKITParser.LibInclContext,0)


        def libInclStmt(self):
            return self.getTypedRuleContext(BKITParser.LibInclStmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_libIncl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibIncl" ):
                return visitor.visitLibIncl(self)
            else:
                return visitor.visitChildren(self)



    def libIncl(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.LibInclContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_libIncl, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 32
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.LibInclContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_libIncl)
                    self.state = 28
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 29
                    self.libInclStmt() 
                self.state = 34
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LibInclStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Include(self):
            return self.getToken(BKITParser.Include, 0)

        def InternalLib(self):
            return self.getToken(BKITParser.InternalLib, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_libInclStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibInclStmt" ):
                return visitor.visitLibInclStmt(self)
            else:
                return visitor.visitChildren(self)




    def libInclStmt(self):

        localctx = BKITParser.LibInclStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_libInclStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(BKITParser.Include)
            self.state = 36
            self.match(BKITParser.InternalLib)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NsDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nsDef(self):
            return self.getTypedRuleContext(BKITParser.NsDefContext,0)


        def nsDefStmt(self):
            return self.getTypedRuleContext(BKITParser.NsDefStmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_nsDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNsDef" ):
                return visitor.visitNsDef(self)
            else:
                return visitor.visitChildren(self)



    def nsDef(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.NsDefContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_nsDef, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 43
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.NsDefContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_nsDef)
                    self.state = 39
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 40
                    self.nsDefStmt() 
                self.state = 45
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class NsDefStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Using(self):
            return self.getToken(BKITParser.Using, 0)

        def NameSpace(self):
            return self.getToken(BKITParser.NameSpace, 0)

        def Id(self):
            return self.getToken(BKITParser.Id, 0)

        def Semi(self):
            return self.getToken(BKITParser.Semi, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_nsDefStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNsDefStmt" ):
                return visitor.visitNsDefStmt(self)
            else:
                return visitor.visitChildren(self)




    def nsDefStmt(self):

        localctx = BKITParser.NsDefStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nsDefStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(BKITParser.Using)
            self.state = 47
            self.match(BKITParser.NameSpace)
            self.state = 48
            self.match(BKITParser.Id)
            self.state = 49
            self.match(BKITParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(BKITParser.Int, 0)

        def Main(self):
            return self.getToken(BKITParser.Main, 0)

        def OpenPara(self):
            return self.getToken(BKITParser.OpenPara, 0)

        def ClosePara(self):
            return self.getToken(BKITParser.ClosePara, 0)

        def OpenBraket(self):
            return self.getToken(BKITParser.OpenBraket, 0)

        def main_body(self):
            return self.getTypedRuleContext(BKITParser.Main_bodyContext,0)


        def CloseBraket(self):
            return self.getToken(BKITParser.CloseBraket, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_mainFunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainFunc" ):
                return visitor.visitMainFunc(self)
            else:
                return visitor.visitChildren(self)




    def mainFunc(self):

        localctx = BKITParser.MainFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mainFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(BKITParser.Int)
            self.state = 52
            self.match(BKITParser.Main)
            self.state = 53
            self.match(BKITParser.OpenPara)
            self.state = 54
            self.match(BKITParser.ClosePara)
            self.state = 55
            self.match(BKITParser.OpenBraket)
            self.state = 56
            self.main_body()
            self.state = 57
            self.match(BKITParser.CloseBraket)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclContext,i)


        def while_struct(self):
            return self.getTypedRuleContext(BKITParser.While_structContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_main_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_body" ):
                return visitor.visitMain_body(self)
            else:
                return visitor.visitChildren(self)




    def main_body(self):

        localctx = BKITParser.Main_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.decl()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8 or _la==9):
                    break

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 64
                self.while_struct()


            self.state = 67
            self.return_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(BKITParser.Int, 0)

        def Id(self):
            return self.getToken(BKITParser.Id, 0)

        def Semi(self):
            return self.getToken(BKITParser.Semi, 0)

        def Assignment(self):
            return self.getToken(BKITParser.Assignment, 0)

        def Integer(self):
            return self.getToken(BKITParser.Integer, 0)

        def Flt(self):
            return self.getToken(BKITParser.Flt, 0)

        def Float(self):
            return self.getToken(BKITParser.Float, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(BKITParser.Int)
                self.state = 70
                self.match(BKITParser.Id)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 71
                    self.match(BKITParser.Assignment)
                    self.state = 72
                    self.match(BKITParser.Integer)


                self.state = 75
                self.match(BKITParser.Semi)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(BKITParser.Flt)
                self.state = 77
                self.match(BKITParser.Id)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 78
                    self.match(BKITParser.Assignment)
                    self.state = 79
                    self.match(BKITParser.Float)


                self.state = 82
                self.match(BKITParser.Semi)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_structContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def While(self):
            return self.getToken(BKITParser.While, 0)

        def OpenPara(self):
            return self.getToken(BKITParser.OpenPara, 0)

        def ClosePara(self):
            return self.getToken(BKITParser.ClosePara, 0)

        def OpenBraket(self):
            return self.getToken(BKITParser.OpenBraket, 0)

        def CloseBraket(self):
            return self.getToken(BKITParser.CloseBraket, 0)

        def Id(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.Id)
            else:
                return self.getToken(BKITParser.Id, i)

        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.Integer)
            else:
                return self.getToken(BKITParser.Integer, i)

        def Float(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.Float)
            else:
                return self.getToken(BKITParser.Float, i)

        def InEq(self):
            return self.getToken(BKITParser.InEq, 0)

        def Eq(self):
            return self.getToken(BKITParser.Eq, 0)

        def while_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.While_bodyContext)
            else:
                return self.getTypedRuleContext(BKITParser.While_bodyContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_while_struct

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_struct" ):
                return visitor.visitWhile_struct(self)
            else:
                return visitor.visitChildren(self)




    def while_struct(self):

        localctx = BKITParser.While_structContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_struct)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(BKITParser.While)
            self.state = 86
            self.match(BKITParser.OpenPara)
            self.state = 87
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 88
            _la = self._input.LA(1)
            if not(_la==18 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 89
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 90
            self.match(BKITParser.ClosePara)
            self.state = 91
            self.match(BKITParser.OpenBraket)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 4719424) != 0:
                self.state = 92
                self.while_body()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(BKITParser.CloseBraket)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Cout(self):
            return self.getToken(BKITParser.Cout, 0)

        def Shift(self):
            return self.getToken(BKITParser.Shift, 0)

        def Semi(self):
            return self.getToken(BKITParser.Semi, 0)

        def Id(self):
            return self.getToken(BKITParser.Id, 0)

        def String(self):
            return self.getToken(BKITParser.String, 0)

        def Char(self):
            return self.getToken(BKITParser.Char, 0)

        def Inc(self):
            return self.getToken(BKITParser.Inc, 0)

        def Int(self):
            return self.getToken(BKITParser.Int, 0)

        def Assignment(self):
            return self.getToken(BKITParser.Assignment, 0)

        def Integer(self):
            return self.getToken(BKITParser.Integer, 0)

        def Flt(self):
            return self.getToken(BKITParser.Flt, 0)

        def Float(self):
            return self.getToken(BKITParser.Float, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_while_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_body" ):
                return visitor.visitWhile_body(self)
            else:
                return visitor.visitChildren(self)




    def while_body(self):

        localctx = BKITParser.While_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_body)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(BKITParser.Cout)
                self.state = 101
                self.match(BKITParser.Shift)
                self.state = 102
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 104857600) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.match(BKITParser.Semi)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(BKITParser.Inc)
                self.state = 105
                self.match(BKITParser.Id)
                self.state = 106
                self.match(BKITParser.Semi)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.match(BKITParser.Id)
                self.state = 108
                self.match(BKITParser.Inc)
                self.state = 109
                self.match(BKITParser.Semi)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 110
                    self.match(BKITParser.Int)


                self.state = 113
                self.match(BKITParser.Id)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 114
                    self.match(BKITParser.Assignment)
                    self.state = 115
                    self.match(BKITParser.Integer)


                self.state = 118
                self.match(BKITParser.Semi)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 119
                    self.match(BKITParser.Flt)


                self.state = 122
                self.match(BKITParser.Id)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 123
                    self.match(BKITParser.Assignment)
                    self.state = 124
                    self.match(BKITParser.Float)


                self.state = 127
                self.match(BKITParser.Semi)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Return(self):
            return self.getToken(BKITParser.Return, 0)

        def Semi(self):
            return self.getToken(BKITParser.Semi, 0)

        def Id(self):
            return self.getToken(BKITParser.Id, 0)

        def Integer(self):
            return self.getToken(BKITParser.Integer, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = BKITParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(BKITParser.Return)
            self.state = 131
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 132
            self.match(BKITParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.libIncl_sempred
        self._predicates[3] = self.nsDef_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def libIncl_sempred(self, localctx:LibInclContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def nsDef_sempred(self, localctx:NsDefContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




